--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 VITE_GEMINI_API_KEY=AIzaSyAq5-n9eh_0z1jKw93ejrwqtoExhfFxZm4
 VITE_PERPLEXITY_API_KEY=
 
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW50aW1hdGUtcG9sZWNhdC04LmNsZXJrLmFjY291bnRzLmRldiQ
+
 
 
