--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.4",
     "@google/genai": "^0.14.1",
     "@google/generative-ai": "^0.24.1",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.7",
+    "lucide-react": "^0.511.0",
     "phaser": "^3.88.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
