--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "phaser": "^3.88.2",
     "react": "^19.1.0",
