final changes before deployement

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW50aW1hdGUtcG9sZWNhdC04LmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_BACKEND_URL = http://localhost:3000
+VITE_DSA_URL = https://dsa-dragon.vercel.app/
+VITE_GEMINI_API= AIzaSyAq5-n9eh_0z1jKw93ejrwqtoExhfFxZm4
